--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <div id="job-widget-container"></div>
 
     <!-- Load the widget script from Vite dev server -->
-    <script type="module" src="/src/main.ts" data-query="q=frontend" data-count="3"></script>
+    <script type="module" src="/src/main.ts" data-query="terms=frontend" data-count="3"></script>
   </body>
 </html>
